actualizacion, guardo todo para continuar con la app

--- a/src/app/Componentes/contacto/contacto.component.html
+++ b/src/app/Componentes/contacto/contacto.component.html
@@ -7,8 +7,11 @@
                 <div class="row margin30 alturaMinima">
 
                     <!--   Información de Contacto  -->
-                    <div class="col-12 col-lg-6 fondoBlancoPerla centrar">
+                    <div class="col-12 col-lg-6 fondoBlancoPerla centrar overflowH">
+
                         <div class="">
+
+                            <img class="fotoContacto rounded-circle sombra m-3" src="{{ photoprofile }}" alt="Foto de Contacto">
 
                             <!--   Email   -->
                             <a href="mailto:{{email}}">
