--- a/src/app/Componentes/login/inicio-session/inicio-session.component.html
+++ b/src/app/Componentes/login/inicio-session/inicio-session.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-12">
-        <span class="alert alert-danger" *ngIf="errorInicio">Usuario o Contraseña invalidos</span>
+        <span class="alert alert-danger centrar" *ngIf="errorInicio">Usuario o Contraseña invalidos</span>
     </div>
 </div>
 
