--- a/src/app/Componentes/botones/botones.component.html
+++ b/src/app/Componentes/botones/botones.component.html
@@ -1,9 +1,8 @@
 <div class="container-fluid">
-
     <!--   Botones para pc   -->
     <div class="max20px pc animationFX">
         <nav class="text-center">
-            <ul class="navbar navbar-bar mx-auto d-flex">
+            <ul class="navbar navbar-bar mx-auto">
                 <li><a href="javascript:void(0)" class="fontButtons" (click)="inicio()">Inicio</a></li>
                 <li><a href="javascript:void(0)" class="fontButtons" (click)="acercade()">Acerca de</a></li>
                 <li><a href="javascript:void(0)" class="fontButtons" (click)="experiencia()">Experiencia</a></li>
@@ -17,13 +16,14 @@
     </div>
 
     <!--   Botones para cel   -->
-    <!--   Icono tipo Hamburguesa para menu desplegable-->
+    <!--   Icono tipo Hamburguesa para menu desplegable   -->
     <div class="cel animationMenu" *ngIf="iconMenu">
         <a href="javascript:void(0)" (click)="menuCel()">
             <img class="iMenu" src="./assets/img/iconMenu.png" alt="Icon Menu" >
         </a>
     </div>
-    <!--   Aca empieza el menu desplegable para celulares  -->
+
+    <!--   Aca empieza el menu desplegable para celulares    -->
     <div class="cel semiFondo animationMenu" *ngIf="statusMenuCel">
         <a href="javascript:void(0)" class="btn-close-white closeBtn" (click)="menuCel()"><b>&times;</b></a>
         <nav class="text-center">
