--- a/src/app/Componentes/footer/footer.component.html
+++ b/src/app/Componentes/footer/footer.component.html
@@ -3,11 +3,12 @@
         <div class="col-lg-12 text-center textWhite">
             <span>
                 <div class="footerpadding">
-                    <p>Powered by:
-                        <img class="dlr" (click)="dlr()"  src="./assets/img/Logo_DLR_w.png" alt="Logo Delgado Lucio Rodrigo">
+                    <span class="col-12 col-lg-6">
+                        Powered by:
+                        <img class="dlr" (click)="dlr()" src="./assets/img/Logo_DLR_w.png" alt="Logo Delgado Lucio Rodrigo">
                         | © Argentina Programa 2023
-                    </p>
-                    <p>Santa Fe, Argentina</p>
+                        <br>Santa Fe, Argentina
+                    </span>
                 </div>
             </span>
         </div>
